tests/expectations/compiler/statements/duplicate_variable.out
Error [EAST0372017]: The name `x` is defined multiple times.
    --> compiler-test:5:12
     |
   4 |       	let x: u8 = 1u8;
     |            ^ previous definition of `x` here
   5 |         	let x: bool = true;
     |              ^ `x` redefined here
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
